// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign up form is rendered correctly 1`] = `
<div
  className="App"
>
  <header
    className="auth-header"
    role="banner"
  >
    <img
      alt="shangify brand logo"
      className="logo__img1"
      src="shangify_logo.png"
    />
    <img
      alt=""
      className="logo__img2"
      src="shangify_brand_name.png"
    />
    <nav
      aria-label="main navigation"
      className="auth-header__nav"
      role="navigation"
    >
      <a
        aria-label="Go back to the homepage"
        className="auth-header__homepage_link"
        href="/"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
          />
        </svg>
      </a>
    </nav>
  </header>
  <main
    className="sign-up-form__background"
    role="main"
  >
    <div
      className="sign-up-form__window"
    >
      <p
        className="sign-up-form__cta"
      >
        Sign up to find
        <br />
        your perfect coding buddy!
      </p>
      <div
        className="sign-up-form__el email"
      >
        <input
          aria-label="email"
          className="email sign-up-form__input"
          name="name"
          onChange={[Function]}
          placeholder="Email"
          style={Object {}}
          type="text"
          value=""
        />
        
      </div>
      <div
        className="sign-up-form__el username"
      >
        <input
          aria-label="username"
          className="username sign-up-form__input"
          name="username"
          onChange={[Function]}
          placeholder="Username"
          style={Object {}}
          type="text"
          value=""
        />
        <span>
          Only letters, numbers and . _ - Max. 30 characters
        </span>
      </div>
      <div
        className="sign-up-form__el name"
      >
        <input
          aria-label="first name"
          className="name sign-up-form__input"
          name="name"
          onChange={[Function]}
          placeholder="First name"
          style={Object {}}
          type="text"
          value=""
        />
        
      </div>
      <div
        className="sign-up-form__el lastname"
      >
        <input
          aria-label="last name"
          className="lastname sign-up-form__input"
          name="last name"
          onChange={[Function]}
          placeholder="Last name"
          style={Object {}}
          type="text"
          value=""
        />
        
      </div>
      <div
        className="sign-up-form__el password"
      >
        <input
          aria-label="password"
          className="password sign-up-form__input"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          role="textbox"
          style={Object {}}
          type="password"
          value=""
        />
        
      </div>
      <div
        className="sign-up-form__el password_second"
      >
        <input
          aria-label="confirm your password"
          className="password_second sign-up-form__input"
          name="password"
          onChange={[Function]}
          placeholder="Confirm your password"
          role="textbox"
          style={Object {}}
          type="password"
          value=""
        />
      </div>
      <div
        className="sign-up-form__el bio"
      >
        <textarea
          aria-label="Add bio (you can do it later)"
          className="bio sign-up-form__input"
          name="bio"
          onChange={[Function]}
          placeholder="You can tell a little about yourself if you want"
          style={Object {}}
          value=""
        />
        <span>
          150/150
        </span>
        
      </div>
      <button
        className="sign-up-form__button"
        disabled={false}
        onClick={[Function]}
      >
        Sign up
      </button>
      <p
        className="sign-up-form__login"
      >
        Already have an account? 
        <a
          className="sign-up-form__login_link"
          href="/auth"
          onClick={[Function]}
        >
          Log in
        </a>
         instead
      </p>
    </div>
  </main>
  <footer
    className="footer__background"
    role="contentinfo"
  >
    <div
      className="footer__container"
    >
      <span>
        ©Copyright 
        2022
      </span>
    </div>
  </footer>
</div>
`;

exports[`sign up success is rendered correctly 1`] = `
<div
  className="App"
>
  <header
    className="auth-header"
    role="banner"
  >
    <img
      alt="shangify brand logo"
      className="logo__img1"
      src="shangify_logo.png"
    />
    <img
      alt=""
      className="logo__img2"
      src="shangify_brand_name.png"
    />
    <nav
      aria-label="main navigation"
      className="auth-header__nav"
      role="navigation"
    >
      <a
        aria-label="Go back to the homepage"
        className="auth-header__homepage_link"
        href="/"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
          />
        </svg>
      </a>
    </nav>
  </header>
  <main
    className="sign-up-success__background"
  >
    <p>
      Thanks for signing up.
      <br />
      We sent you an email. Click on the link to verify your account.
    </p>
  </main>
  <footer
    className="footer__background"
    role="contentinfo"
  >
    <div
      className="footer__container"
    >
      <span>
        ©Copyright 
        2022
      </span>
    </div>
  </footer>
</div>
`;
